<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/function_settings">

        <SwitchPreferenceCompat
            app:key="progress_move"
            app:summary="@string/summary_progress_move"
            app:title="@string/progress_move" />

        <SwitchPreferenceCompat
            app:key="no_screenshot"
            app:summary="@string/summary_no_screenshot"
            app:title="@string/no_screenshot" />
        <SwitchPreferenceCompat
            app:key="auto_copy"
            app:summary="@string/summary_auto_copy"
            app:title="@string/auto_copy" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/purge_data">
        <Preference
            app:key="purge_data"
            app:summary="@string/summary_purge_all"
            app:title="@string/purge_all" />
    </PreferenceCategory>


    <PreferenceCategory app:title="@string/app_info">
        <Preference
            app:key="rate_app"
            app:summary="@string/summary_rate"
            app:title="@string/rate" />
        <Preference
            app:key="app_version"
            app:summary="@string/current_version"
            app:title="@string/version" />
    </PreferenceCategory>
</PreferenceScreen>