<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        tools:context=".MainActivity">


        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/bg_code" />

            <TextView
                android:id="@+id/code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/unlock_to_get"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:indeterminate="false"
                android:max="60"
                android:progress="60"
                android:progressBackgroundTint="#FFFFFF"
                android:progressTint="#3289BE"
                android:scaleX="2"
                android:scaleY="2" />

            <TextView
                android:id="@+id/remain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="90dp"
                android:text="@string/remained_code"
                android:textAlignment="center"
                android:textColor="@color/white" />
        </FrameLayout>

        <LinearLayout
            android:id="@+id/buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout">

            <Button
                android:id="@+id/copy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/copy" />

            <Button
                android:id="@+id/delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/delete" />

            <Button
                android:id="@+id/extend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/extend" />

            <Button
                android:id="@+id/share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/share" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/buttons">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:text="@string/statement"
                android:textColor="#aeaeae" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="3dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="30dp"
                android:text="@string/tip"
                android:textColor="#3186ad"
                android:textSize="13sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#595959" />

            <TextView
                android:id="@+id/import_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:clickable="true"
                android:drawableRight="@drawable/further"
                android:drawableTint="#FFFFFF"
                android:focusable="true"
                android:text="@string/import_code"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#595959" />


            <TextView
                android:id="@+id/settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:clickable="true"
                android:drawableRight="@drawable/further"
                android:drawableTint="#FFFFFF"
                android:focusable="true"
                android:text="@string/settings"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#595959" />

            <TextView
                android:id="@+id/tutorial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:clickable="true"
                android:drawableRight="@drawable/further"
                android:drawableTint="#FFFFFF"
                android:focusable="true"
                android:text="@string/tutorial"
                android:textColor="@color/white"
                android:textSize="16sp" />


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#595959" />

            <TextView
                android:id="@+id/about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:clickable="true"
                android:drawableRight="@drawable/further"
                android:drawableTint="#FFFFFF"
                android:focusable="true"
                android:text="@string/about"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#595959" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>