<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#171717">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#171717"
        tools:context=".ImportActivity">

        <LinearLayout
            android:id="@+id/ip_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/import_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/import_text"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/ip_content"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_margin="20dp"
                android:background="@drawable/edit_bg"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:maxLines="80"
                android:padding="14dp"
                android:scrollbars="vertical"
                android:singleLine="false"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@id/import_title" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/ip_box">
                <Button
                    android:id="@+id/ip_clear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:text="@string/clear" />

                <Button
                    android:id="@+id/ip_confirm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:text="@string/confirm" />

            </LinearLayout>
            </HorizontalScrollView>

            <TextView
                android:id="@+id/ip_helper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/ip_helper"
                android:textColor="#aeaeae" />

            <TextView
                android:id="@+id/ip_tip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/ip_tip"
                android:textColor="#3186ad" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>