<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#171717"
    tools:context=".AboutActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="1dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/my_avatar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    app:srcCompat="@drawable/my_avatar" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/creator_profile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/creator"
                        android:textColor="@color/white"
                        android:textSize="20dp" />

                    <TextView
                        android:id="@+id/creator_github"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="GitHub@Koukotsukan"
                        android:textColor="#B1B1B1"
                        android:textSize="10dp" />

                </LinearLayout>
            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:text="@string/privacy_statement"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:text="@string/begger_title"
                android:textColor="@color/white" />


            <ImageView
                android:id="@+id/begger"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/begger" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:text="@string/copyright_contact"
                android:textColor="#B1B1B1"
                android:textSize="7dp" />


        </LinearLayout>

    </ScrollView>
</RelativeLayout>